[package]
name = "sprig"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DISTREAT/sprig"
authors = ["DISTREAT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
anyhow = "1.0.79"
clap = { features = ["std", "help", "usage", "error-context"], default-features = false, version = "4.4.14" }
clap_derive = "4.4.7"
dialoguer = { features = ["password"], default-features = false, version = "0.11.0" }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = { default-features = false, version = "0.10.8" }
