[package]
name = "sprig"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DISTREAT/sprig"
authors = ["DISTREAT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
anyhow = "1.0.79"
argon2 = "0.5.2"
axum = "0.7.4"
bincode = "1.3.3"
bytes = "1.5.0"
clap = { features = ["std", "help", "usage", "error-context"], default-features = false, version = "4.4.14" }
clap_derive = "4.4.7"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dialoguer = { features = ["password"], default-features = false, version = "0.11.0" }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
kadcast = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.20"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.111"
sha2 = { default-features = false, version = "0.10.8" }
tokio = "1.35.1"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
